--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,4 +35,4 @@ jobs:
           # only push image when we merge PRs or push to main branch
           push: ${{ github.event_name != 'pull_request' }}
           # hardcoded for a single name/tags
-          tags: ghcr.io/---
+          tags: ghcr.io/Easlank/wordsmith-web:latest
