--- a/.github/workflows/call-trivy.yml
+++ b/.github/workflows/call-trivy.yml
@@ -6,6 +6,6 @@ on:
 jobs:
  scan:
    name: Scan
-   uses: easlank/actions/.github/workflows/reusable-trivy.yml@trivy-branch
+   uses: easlank/actions/.github/workflows/reusable-trivy.yml@master
    with:
      image: 'ghcr.io/easlank/wordsmith-web:latest'
