--- a/.github/workflows/call-trivy.yml
+++ b/.github/workflows/call-trivy.yml
@@ -8,4 +8,4 @@ jobs:
    name: Scan
    uses: easlank/actions/.github/workflows/reusable-trivy.yml@master
    with:
-     image: 'ghcr.io/easlank/wordsmith-web:latest'
+     image: 'ghcr.io/easlank/wordsmith-web:pr-5'
